--- a/index.html
+++ b/index.html
@@ -215,8 +215,9 @@
 								<li id="menu-item-89"
 									class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-ancestor current-menu-parent current_page_parent current_page_ancestor menu-item-has-children menu-item-89 dropdown">
 									<a title="Home" href="/" class="dropdown-toggle nav-link" aria-haspopup="true">Home
-										<i class='fas fa-angle-down'></i></a>
-									<ul role="menu" class=" dropdown-menu">
+										<!-- <i class='fas fa-angle-down'></i> -->
+									</a>
+									<!-- <ul role="menu" class=" dropdown-menu">
 										<li id="menu-item-400"
 											class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-400 dropdown">
 											<a title="Home 2" href="#" class="nav-link">Home 2 <i
@@ -239,26 +240,33 @@
 											class="menu-item menu-item-type-post_type menu-item-object-page menu-item-101">
 											<a title="Home Food" href="#" class="nav-link">Home Food</a>
 										</li>
-									</ul>
+									</ul> -->
 								</li>
 								<li id="menu-item-255"
 									class="menu-item menu-item-type-post_type menu-item-object-post menu-item-has-children menu-item-255 dropdown">
 									<a title="Posts" href="#/" class="dropdown-toggle nav-link"
-										aria-haspopup="true">Posts <i class='fas fa-angle-down'></i></a>
+										aria-haspopup="true">
+										Curiosity bites
+										<!-- <i class='fas fa-angle-down'></i> -->
+									</a>
 
-									<ul role="menu" class=" dropdown-menu">
+									<!-- <ul role="menu" class=" dropdown-menu">
 										<li id="menu-item-256"
 											class="menu-item menu-item-type-post_type menu-item-object-post menu-item-256">
 											<a title="Blog Post" href="#" class="nav-link">Blog Post</a>
 										</li>
-									</ul>
+									</ul> -->
 								</li>
 								<li id="menu-item-106"
 									class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-106 dropdown">
-									<a title="Pages" href="#" class="dropdown-toggle nav-link"
-										aria-haspopup="true">Pages <i class='fas fa-angle-down'></i></a>
+									<a title="Pages" href="newsletters.html" class="dropdown-toggle nav-link"
+										aria-haspopup="true">
+										<!-- Pages  -->
+										Newsletters
+										<!-- <i class='fas fa-angle-down'></i> -->
+									</a>
 
-									<ul role="menu" class=" dropdown-menu">
+									<!-- <ul role="menu" class=" dropdown-menu">
 										<li id="menu-item-193"
 											class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-193 dropdown">
 											<a title="Header" href="#" class="nav-link">Header</a><i
@@ -287,9 +295,9 @@
 												</li>
 											</ul>
 										</li>
-									</ul>
+									</ul> -->
 								</li>
-								<li id="menu-item-867"
+								<!-- <li id="menu-item-867"
 									class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-867"><a
 										title="Travel" href="#" class="nav-link">Travel</a></li>
 								<li id="menu-item-868"
@@ -316,10 +324,10 @@
 												sidebar</a>
 										</li>
 									</ul>
-								</li>
-								<li id="menu-item-111"
+								</li> -->
+								<!-- <li id="menu-item-111"
 									class="menu-item menu-item-type-post_type menu-item-object-page menu-item-111"><a
-										title="Contact Us" href="#" class="nav-link">Contact Us</a></li>
+										title="Contact Us" href="#" class="nav-link">Contact Us</a></li> -->
 							</ul>
 						</div>
 					</nav>
