added download button

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 									<!-- <a href="#search-box" data-toggle="collapse" class="search collapsed"
 										title="Search"> -->
 										<!-- <i class="fas fa-search sr-ic-open"></i> -->
-										<h5>Upcoming sessions</h5>
+										<button class="btn btn-primary btn-sm">Upcoming sessions</button>
 										<!-- <i class="fas fa-times sr-ic-close"></i> -->
 
 									<!-- </a> -->
