--- a/the-inﬂuence-XXI-toolkit.html
+++ b/the-inﬂuence-XXI-toolkit.html
@@ -430,7 +430,9 @@
                                 certain companies have caused disruptions in behaviors and required customers to consume
                                 products in new ways.
                             </p>
-
+                                <div class="text-center">
+                                    <a href="./Influence-XXI-Tool-kit.pdf" style="color: white;" class="btn btn-danger" download="Inﬂuence XXI Toolkit">Download Inﬂuence XXI Toolkit</a>
+                                </div>
                         </div>
                     </article>
                 </div><!-- content-area + page_layout_css -->
