--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 	<!-- Preloader Start -->
-	<!-- <div class="preloader"></div> -->
+	<div class="preloader"></div>
 	<!-- Preloader End -->
 	<!-- header Start -->
 	<header class="header-style-two" data-scroll-index="0">
@@ -65,7 +65,7 @@
 								<nav id="mobile-menu-right">
 									<ul class="one-pagenav">
 										<li><a href="#">CURIOSITY BITES</a></li>
-										<li><a href="#">NEWSLETTERS</a></li>
+										<li><a href="./newletter.html">NEWSLETTERS</a></li>
 										<li><a href="#">UPCOMING SESSIONS</a></li>
 										<!-- <li><a href="#home" data-scroll-nav="0">Home</a></li>
 										<li><a href="#about" data-scroll-nav="1">About</a></li>
