--- a/top-3-Pan-African-Institutions-Steering-Africa’s-Engagement-With-The-World.html
+++ b/top-3-Pan-African-Institutions-Steering-Africa’s-Engagement-With-The-World.html
@@ -17,7 +17,7 @@
 
 <body>
     <!-- Preloader Start -->
-    <!-- <div class="preloader"></div> -->
+    <div class="preloader"></div>
     <!-- Preloader End -->
     <!-- header Start -->
     <header class="header-style-two" data-scroll-index="0">
@@ -35,7 +35,7 @@
                                 <nav id="mobile-menu-right">
                                     <ul class="one-pagenav">
                                         <li><a href="#">CURIOSITY BITES</a></li>
-                                        <li><a href="#">NEWSLETTERS</a></li>
+                                        <li><a href="./newletter.html">NEWSLETTERS</a></li>
                                         <li><a href="#">UPCOMING SESSIONS</a></li>
                                     </ul>
                                 </nav>
