--- a/in-africa-Identity-must-be-a-central-feature-of-brand-strategies.html
+++ b/in-africa-Identity-must-be-a-central-feature-of-brand-strategies.html
@@ -20,7 +20,7 @@
 
 <body>
     <!-- Preloader Start -->
-    <!-- <div class="preloader"></div> -->
+    <div class="preloader"></div>
     <!-- Preloader End -->
     <!-- header Start -->
     <header class="header-style-two" data-scroll-index="0">
@@ -66,7 +66,7 @@
                                 <nav id="mobile-menu-right">
                                     <ul class="one-pagenav">
                                         <li><a href="#">CURIOSITY BITES</a></li>
-                                        <li><a href="#">NEWSLETTERS</a></li>
+                                        <li><a href="./newletter.html">NEWSLETTERS</a></li>
                                         <li><a href="#">UPCOMING SESSIONS</a></li>
                                     </ul>
                                 </nav>
