--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-8 col-xl-6">
-						<h2 class="mrb-30">Though leadership</h2>
+						<h2 class="mrb-30">Thought Leadership</h2>
 					</div>
 				</div>
 			</div>
