--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 	<!-- Preloader Start -->
-	<!-- <div class="preloader"></div> -->
+	<div class="preloader"></div>
 	<!-- Preloader End -->
 	<!-- header Start -->
 	<header class="header-style-two" data-scroll-index="0">
