added text color

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 								</div> -->
 								<div class="para">
 									<p style="text-transform: uppercase;">
-										<a href="in-africa-Identity-must-be-a-central-feature-of-brand-strategies.html">IN
+										<a style="color: #3e3e3e;" href="in-africa-Identity-must-be-a-central-feature-of-brand-strategies.html">IN
 											AFRICA, IDENTITY MUST BE A CENTRAL FEATURE OF BRAND STRATEGIES</a>
 										<!-- IN AFRICA, IDENTITY MUST BE A CENTRAL FEATURE OF BRAND STRATEGIES -->
 									</p>
@@ -397,7 +397,7 @@
 								</div> -->
 								<div class="para">
 									<p style="text-transform: uppercase; margin-bottom:50px">
-										<a href="the-inﬂuence-XXI-toolkit.html">THE INFLUENCE XXI TOOLKIT</a>
+										<a style="color: #3e3e3e;" href="the-inﬂuence-XXI-toolkit.html">THE INFLUENCE XXI TOOLKIT</a>
 									</p>
 								</div>
 							</div>
@@ -416,7 +416,7 @@
 									</h4> -->
 									<div class="para">
 										<p style="text-transform: uppercase; margin-bottom:38px">
-											<a href="top-3-Pan-African-Institutions-Steering-Africa’s-Engagement-With-The-World.html">
+											<a style="color: #3e3e3e;" href="top-3-Pan-African-Institutions-Steering-Africa’s-Engagement-With-The-World.html">
 												TOP 3 PAN AFRICAN INSTITUTIONS STEERING AFRICA’S ENGAGEMENT WITH THE WORLD</a>
 											<!-- IN AFRICA, IDENTITY MUST BE A CENTRAL FEATURE OF BRAND STRATEGIES -->
 										</p>
