corrected font size

--- a/index.html
+++ b/index.html
@@ -114,15 +114,15 @@
 					<div class="row clearfix">
 						<div class="col-xl-8 col-lg-12 col-md-12 content-column">
 							<div class="content-box">
-								<h1>We speak with;</h1>
-								<p style="font-weight: 900; margin-left:60px"> Business leaders, Entrepreneurs,C-suite
-									corporate executives <br> <br>
-									<span style="font-weight: 100 !important;">of exceptional brands in Africa</span>
-								</p>
-								<!-- <p>of exceptional brands in Africa</p> -->
-								<!-- <div class="btn-box">
-									<a href="#" class="cs-btn-one btn-gradient-color">View</a>
-								</div> -->
+								<h1 style="font-size: 18px !important;">We speak with;</h1>
+								<div style="margin-top: -50px; margin-left:20px">
+									<p>
+										Business leaders <br>
+										Entrepreneurs <br>
+										C-suite corporate executives
+									</p>
+								</div>
+								<h1 style="font-size: 18px !important; margin-top: -50px;">of exceptional brands in Africa</h1>
 							</div>
 						</div>
 					</div>
@@ -134,7 +134,7 @@
 				<div class="auto-container">
 					<div class="row clearfix">
 						<div class="col-xl-8 col-lg-12 col-md-12 content-column">
-							<div class="content-box">
+							<!-- <div class="content-box">
 								<h1>We talk about;</h1>
 								<p style="font-weight: 900; margin-left:60px">
 									Leadership,
@@ -145,9 +145,17 @@
 									Culture <br>
 									<span style="font-weight: 100 !important;">and many more…</span>
 								</p>
-								<!-- <div class="btn-box">
-									<a href="#" class="cs-btn-one btn-gradient-color">View</a>
-								</div> -->
+							</div> -->
+							<div class="content-box">
+								<h1 style="font-size: 18px !important;">We talk about;</h1>
+								<div style="margin-top: -50px; margin-left:20px">
+									<br>
+									<p>
+										Leadership, International development, Culture, <br>
+										Networking, Neuroscience, Culture <br>
+									</p>
+								</div>
+								<h1 style="font-size: 18px !important; margin-top: -50px;">and many more…</h1>
 							</div>
 						</div>
 					</div>
