--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 	<!-- Preloader Start -->
-	<div class="preloader"></div>
+	<!-- <div class="preloader"></div> -->
 	<!-- Preloader End -->
 	<!-- header Start -->
 	<header class="header-style-two" data-scroll-index="0">
@@ -447,19 +447,19 @@
 					<div class="col-lg-12">
 						<div class="owl-carousel client-items">
 							<div class="client-item">
-								<img style="height: 100px;" src="images/clients/5.png" alt="">
+								<img style="height: 100px;" src="./images/logo/ashoka logo.png" alt="">
 							</div>
 							<div class="client-item">
-								<img style="height: 100px;" src="images/clients/6.png" alt="">
+								<img style="height: 100px;" src="./images/logo/CC EA logo.png" alt="">
 							</div>
 							<div class="client-item">
-								<img style="height: 100px;" src="images/clients/CapitalClub.jpeg" alt="">
+								<img style="height: 100px;" src="./images/logo/Harvard Kennedy School.png" alt="">
 							</div>
 							<div class="client-item">
-								<img style="height: 100px;" src="images/clients/Newmark.jpeg" alt="">
+								<img style="height: 100px;" src="./images/logo/Newmark Group limited logo.png" alt="">
 							</div>
 							<div class="client-item">
-								<img style="height: 100px;" src="images/clients/Weza1.jpeg" alt="">
+								<img style="height: 100px;" src="./images/logo/weza prosoft.png" alt="">
 							</div>
 						</div>
 					</div>
