--- a/index.html
+++ b/index.html
@@ -114,15 +114,15 @@
 					<div class="row clearfix">
 						<div class="col-xl-8 col-lg-12 col-md-12 content-column">
 							<div class="content-box">
-								<h1 style="font-size: 18px !important;">We speak with;</h1>
-								<div style="margin-top: -50px; margin-left:20px">
+								<h1 style="font-size: 18px !important; font-weight:200;">We speak with;</h1>
+								<div style="margin-top: -50px; margin-left:20px; font-weight:900;">
 									<p>
 										Business leaders <br>
 										Entrepreneurs <br>
 										C-suite corporate executives
 									</p>
 								</div>
-								<h1 style="font-size: 18px !important; margin-top: -50px;">of exceptional brands in Africa</h1>
+								<h1 style="font-size: 18px !important; margin-top: -50px; font-weight:200; margin-left:100px">of exceptional brands in Africa</h1>
 							</div>
 						</div>
 					</div>
@@ -146,16 +146,42 @@
 									<span style="font-weight: 100 !important;">and many more…</span>
 								</p>
 							</div> -->
+							<style>
+								.pp p {
+									line-height: -10px;
+								}
+							</style>
 							<div class="content-box">
-								<h1 style="font-size: 18px !important;">We talk about;</h1>
-								<div style="margin-top: -50px; margin-left:20px">
-									<br>
+								<h1 style="font-size: 18px !important; font-weight:200;">We talk about;</h1>
+								<div style="margin-top: -50px; margin-left:20px; font-weight:900;">
+									<div class="d-flex justify-content-start pp">
+										<div>
+											<p>
+												Leadership
+												<br>
+												International development
+												<br>
+												Culture
+											</p>
+											<!-- <p>International development</p>
+											<p>Culture</p> -->
+										</div>
+										<div style="margin-left: 40px;">
+											<p>
+												Networking
+												<br>
+												Neuroscience
+											</p>
+											<!-- <p>Neuroscience</p> -->
+										</div>
+									</div>
+									<!-- <br>
 									<p>
 										Leadership, International development, Culture, <br>
 										Networking, Neuroscience, Culture <br>
-									</p>
+									</p> -->
 								</div>
-								<h1 style="font-size: 18px !important; margin-top: -50px;">and many more…</h1>
+								<h1 style="font-size: 18px !important; margin-top: -50px; font-weight:400; margin-left:450px">and many more…</h1>
 							</div>
 						</div>
 					</div>
